--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 WAV = "8149f6b0-98f6-5db9-b78f-408fbbb8ef88"
 
 [compat]
+FourierTools = "0.3"
 julia = "1"
 
 [extras]
