--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ authors = ["Eli Smith"]
 version = "0.1.0"
 
 [deps]
+Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
+ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
@@ -15,8 +17,10 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 FourierTools = "b18b359b-aebc-45ac-a139-9c0ccbb2871e"
+Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 ImageSegmentation = "80713f31-8817-5129-9cf8-209ff8fb23e1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 LowRankApprox = "898213cb-b102-5a47-900c-97e73b919f73"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
@@ -28,6 +32,7 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 RollingFunctions = "b0e4dd01-7b14-53d8-9b45-175a3e362653"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+VectorizedReduction = "4ffe575c-65e5-43f4-bc05-e0b500dc3d2c"
 WAV = "8149f6b0-98f6-5db9-b78f-408fbbb8ef88"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
